# stem

./: .gitignore  Cargo.toml  README.md  foundry.toml
capnp/: stem.capnp
crates/atom/: Cargo.toml  build.rs
crates/atom/examples/: atom_indexer.rs  finalizer.rs  membrane_poll.rs
crates/atom/src/: abi.rs  config.rs  cursor.rs  finalizer.rs  indexer.rs  lib.rs
crates/atom/tests/: finalizer_integration.rs  integration.rs  membrane_integration.rs  reorg_finalizer.rs  reorg_naive.rs
crates/atom/tests/common/: mod.rs
crates/stem/: Cargo.toml
crates/stem/examples/: finalizer.rs  membrane_poll.rs  stem_indexer.rs
crates/stem/src/: abi.rs  config.rs  cursor.rs  finalizer.rs  indexer.rs  lib.rs  membrane.rs  trie.rs
crates/stem/tests/: finalizer_integration.rs  integration.rs  membrane_integration.rs  reorg_finalizer.rs  reorg_naive.rs
crates/stem/tests/common/: mod.rs
doc/: audit-log.md  glia-ref.md  stem-abi-ref.md
script/: Deploy.s.sol
src/: Atom.sol  Cortex.sol  Stem.sol
test/: Atom.t.sol  Cortex.t.sol  Stem.t.sol
