[package]
name = "stem"
version = "0.1.0"
edition = "2021"
description = "Off-chain Stem runtime: head-following, finalization, and caching for the Stem contract"


[dependencies]
alloy = { version = "0.4", features = ["rpc-types"] }
ciborium = "0.2"
anyhow = "1"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "stem_indexer"
path = "examples/stem_indexer.rs"
